<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMovieActivity">

    <ImageView
        android:id="@+id/editMovieBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/popcorn" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="@dimen/textSizeWidth"
        android:layout_height="@dimen/textSizeHeight"
        android:background="@drawable/rectangle"
        android:padding="5dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textMovieTitle"
        app:layout_constraintTop_toTopOf="@id/textMovieTitle"
        app:layout_constraintBottom_toBottomOf="@id/textMovieTitle"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="120dp" />


    <Spinner
        android:id="@+id/genreSpinner"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:entries="@array/genres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAddNotes"
        app:layout_constraintBottom_toTopOf="@id/locationSpinner"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/textGenre"
        android:layout_width="@dimen/textSizeWidth"
        android:layout_height="@dimen/textSizeHeight"
        android:background="@drawable/rectangle"
        android:padding="5dp"
        android:text="@string/genre"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/genreSpinner"
        app:layout_constraintTop_toTopOf="@id/genreSpinner"
        app:layout_constraintBottom_toBottomOf="@id/genreSpinner" />

    <EditText
        android:id="@+id/textAddNotes"
        android:layout_width="261dp"
        android:layout_height="94dp"
        android:ems="10"
        android:hint="@string/add_notes_here"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/genreSpinner"
        app:layout_constraintTop_toBottomOf="@id/textMovieTitle"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="208dp" />

    <TextView
        android:id="@+id/notesText"
        android:layout_width="@dimen/textSizeWidth"
        android:layout_height="@dimen/textSizeHeight"
        android:background="@drawable/rectangle"
        android:padding="5dp"
        android:text="@string/notes"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAddNotes"
        app:layout_constraintTop_toTopOf="@id/textAddNotes"
        app:layout_constraintBottom_toBottomOf="@id/textAddNotes"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="241dp" />

    <EditText
        android:id="@+id/textMovieTitle"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/enter_movie_title"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHeader"
        app:layout_constraintBottom_toTopOf="@id/textAddNotes"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="120dp" />

    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:entries="@array/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genreSpinner"
        app:layout_constraintBottom_toTopOf="@id/MovieSaveBtn"
        android:layout_marginEnd="10dp"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="465dp" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="@dimen/textSizeWidth"
        android:layout_height="@dimen/textSizeHeight"
        android:background="@drawable/rectangle"
        android:padding="5dp"
        android:text="@string/location"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/locationSpinner"
        app:layout_constraintTop_toTopOf="@id/locationSpinner"
        app:layout_constraintBottom_toBottomOf="@id/locationSpinner"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="465dp" />

    <Button
        android:id="@+id/MovieSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit_movie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>