<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity"
    android:background="@drawable/theater">

    <TextView
        android:id="@+id/titleDetailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/genreDetailTextView"
        android:textAlignment="center"
        android:background="@drawable/rectangle"
        android:layout_width="@dimen/textSizeWidth"
        android:layout_height="@dimen/textSizeHeight"
        android:layout_marginTop="60dp"
        android:text="@string/genre"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/textGenre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleDetailsTextView" />

    <TextView
        android:id="@+id/textGenre"
        android:background="@drawable/rectangle"
        android:textAlignment="center"
        android:layout_width="@dimen/textSizeWidth"
        android:layout_height="wrap_content"
        android:text="Action"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/genreDetailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/genreDetailTextView"
        app:layout_constraintBottom_toBottomOf="@id/genreDetailTextView"/>

    <TextView
        android:id="@+id/notesDetailTextView"
        android:background="@drawable/rectangle"
        android:textAlignment="center"
        android:layout_width="@dimen/textSizeWidth"
        android:layout_height="@dimen/textSizeHeight"
        android:text="Notes"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationDetailTextView"
        />

    <TextView
        android:id="@+id/locationDetailTextView"
        android:background="@drawable/rectangle"
        android:textAlignment="center"
        android:layout_width="@dimen/textSizeWidth"
        android:layout_height="@dimen/textSizeHeight"
        android:layout_marginTop="60dp"
        android:text="Location"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/genreDetailTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textLocation"/>




    <TextView
        android:id="@+id/textLocation"
        android:background="@drawable/rectangle"
        android:textAlignment="center"
        android:layout_width="@dimen/textSizeWidth"
        android:layout_height="@dimen/textSizeHeight"
        tools:text="Upstairs"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/locationDetailTextView"
        app:layout_constraintTop_toTopOf="@id/locationDetailTextView"
        app:layout_constraintBottom_toBottomOf="@id/locationDetailTextView"/>

    <TextView
        android:id="@+id/noteText"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notesDetailTextView"
        tools:text="Lended to jim" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@id/viewMoviesBtn"
        app:layout_constraintEnd_toStartOf="@+id/viewMoviesBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewMoviesBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="@id/viewMoviesBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewMoviesBtn"
        app:layout_constraintTop_toTopOf="@id/viewMoviesBtn"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/viewMoviesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/view_movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>